# smlk_bsd_auv

./: README.md  readme.txt
bsd_auv_tr_sim_v0_1/: DegElevMatrix.m  canyon_gm_scripps.xlsx  ctrl_TT_ad_ctrl_cpp_ros_feedback.slx  ctrl_TT_ad_ctrl_cpp_ros_feedback_1.slxc  ctrl_TT_ad_ctrl_cpp_ros_feedback_1.tgz  testdata.mat  tester.m
bsd_auv_tr_sim_v0_1/archive/: canyon_v2.xlsx
bsd_auv_tr_sim_v0_1/ctrl_TT_ad_ctrl_cpp_ros_feedback_1_ert_rtw/: buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  ctrl_TT_ad_ctrl_cpp_ros_feedback_1_types.h  ert_main.cpp  main.cpp  rosModelInfo.mat  rosnodeinterface.cpp  rosnodeinterface.h  rt_assert.h  rt_defines.h  rt_nonfinite.h  rtmodel.h  rtwtypeschksum.mat  slros_initialize.h
bsd_auv_tr_sim_v0_1/data/: TT_2.mat  TT_gm.mat  TT_scripps.mat  TT_scripps_ad.mat
bsd_auv_tr_sim_v0_1/figures/: CEP_gammadot.eps  CEP_scripps_3d.eps  CEP_scripps_3d_v2.eps  CEP_scripps_3d_v3.eps  CEP_scripps_3d_v4.eps
bsd_auv_tr_sim_v0_1/src/avl_bsd_translator/: CMakeLists.txt
bsd_auv_tr_sim_v0_1/src/avl_bsd_translator/include/: bsd_example.h
bsd_auv_tr_sim_v0_1/src/avl_bsd_translator/launch/: example_bsd.launch
bsd_auv_tr_sim_v0_1/src/avl_bsd_translator/msg/: CommandMsg.msg
bsd_auv_tr_sim_v0_1/surface/: 20x10_meters__out.log.1  Hull.prt.1  Root1.SLDPRT  asm0001.asm.12  asm0001.asm.14  asm0001.asm.18  asm0001.asm.26  asm0001.asm.27  asm0001.asm.28  asm0001.asm.4  asm0001.asm.6  ocean_bottom.prt.13  ocean_bottom.prt.17  ocean_bottom.prt.18  ocean_bottom.prt.2  ocean_bottom.prt.24  ocean_bottom.prt.6  ocean_bottom.stp  prt0001123123__out.log.2  prt0001__out.log.6  sail.prt.1  sailplanes1-mirrored.prt.1  surface1.stp  tailplanelowerpt2.prt.1  tailplaneupperpt1.prt.1  topo_scripps_0427001_solid___out.log.1  topo_scripps_0427001_solid___out.log.3
bsd_auv_tr_sim_v0_2/: BeBOT.m  CEP_plots_v4.asv  ctrl_PF_ad  ctrl_TT_ad_ctrl_cpp_ros_feedback_1.slx  ctrl_TT_ad_ctrl_cpp_ros_feedback_1.slxc  ctrl_TT_ad_ctrl_cpp_ros_feedback_1.tgz  ctrl_TT_ad_ctrl_cpp_ros_feedback_2.slxc  ctrl_TT_ad_ctrl_cpp_ros_feedback_2.tgz  testdata.mat
bsd_auv_tr_sim_v0_2/archive/: canyon_v2_gm.xlsx
bsd_auv_tr_sim_v0_2/ctrl_TT_ad_ctrl_cpp_ros_feedback_1_ert_rtw/: buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  ctrl_TT_ad_ctrl_cpp_ros_feedback_1.cpp  ctrl_TT_ad_ctrl_cpp_ros_feedback_1_data.cpp  ctrl_TT_ad_ctrl_cpp_ros_feedback_1_private.h  ert_main.cpp  rosModelInfo.mat  rosnodeinterface.cpp  rtGetNaN.cpp  rt_assert.h  rt_defines.h  rt_nonfinite.cpp  rt_nonfinite.h  rtmodel.h  rtwtypeschksum.mat  slros_busmsg_conversion.h
bsd_auv_tr_sim_v0_2/ctrl_TT_ad_ctrl_cpp_ros_feedback_2_ert_rtw/: buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  ctrl_TT_ad_ctrl_cpp_ros_feedback_2.cpp  ctrl_TT_ad_ctrl_cpp_ros_feedback_2.h  ctrl_TT_ad_ctrl_cpp_ros_feedback_2_data.cpp  ctrl_TT_ad_ctrl_cpp_ros_feedback_2_private.h  ctrl_TT_ad_ctrl_cpp_ros_feedback_2_types.h  ert_main.cpp  main.cpp  rosModelInfo.mat  rosnodeinterface.cpp  rosnodeinterface.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_assert.h  rt_defines.h  rt_nonfinite.cpp  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat  slros_busmsg_conversion.cpp  slros_busmsg_conversion.h  slros_initialize.cpp  slros_initialize.h
bsd_auv_tr_sim_v0_2/data/: PF_copy.mat  PF_scripps.mat  PF_scripps_ad_ref.mat
bsd_auv_tr_sim_v0_2/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
bsd_auv_tr_sim_v0_2/figures/: CEP_near_surface.eps  CEP_vel_cmd.eps  vector_summary_new.pptx
bsd_auv_tr_sim_v0_2/new_node/: ctrl_TT_ad_ctrl_cpp_ros.slx
bsd_auv_tr_sim_v0_2/slprj/: matlab.mat
bsd_auv_tr_sim_v0_2/surface/: Planes.stp  Ship_aft.stl  TailPlaneLowerSt2.prt.1  asm0001.asm.11  asm0001.asm.13  asm0001.asm.19  asm0001.asm.20  asm0001.asm.21  asm0001.asm.22  asm0001.asm.8  asm0001.asm.9  floor.prt.2  floor.stp  floor__out.log.1  long.stp  ocean_bottom.prt.10  ocean_bottom.prt.12  ocean_bottom.prt.15  ocean_bottom.prt.5  ocean_bottom.prt.7  ocean_bottom__out.log.1  prt0001123123__out.log.3  prt0001__out.log.2  root3__out.log.1  sailplanes1.prt.1  surface__out.log.1  tailplanelowerpt1.prt.1  tailplaneroots.prt.1  tailplaneupperpt2.prt.1  tailplaneupperst1-mirrored.prt.1  test.stp  (+4 more)
bsd_auv_tr_sim_v0_3_ws/: BernsteinPoly.m  CEP_plots_v4.m  PF_scripps_ad.mat  ctrl_TT_ad_ctrl  ctrl_TT_ad_ctrl_cpp_ros.slx  ctrl_TT_ad_ctrl_cpp_ros.slxc  ctrl_TT_ad_ctrl_cpp_ros.tgz  ctrl_TT_ad_ctrl_cpp_ros_feedback_1.slxc  ctrl_TT_ad_ctrl_cpp_ros_feedback_1.tgz  run.m  save_data.m  testdata.mat
bsd_auv_tr_sim_v0_3_ws/src/avl_bsd_translator/: package.xml
bsd_auv_tr_sim_v0_3_ws/src/avl_bsd_translator/msg/: HeartbeatMsg.msg  ResponseMsg.msg
des--elev_rud_model_TT_z_v_psi_py_ws/: readme.txt
des--elev_rud_model_TTpy_ws/: readme.txt
des--elev_rud_model_cpp_ws/: readme_d.txt
des--elev_rud_model_ws/: README.odt
(+2192 files in other folders)
